Ajout pattern Decorator avec Planet et PlanetWithObstacles Refacto test parametric + TU classiques